new design (june 2019).

--- a/src/blocks/b-call-widget/b-call-widget.less
+++ b/src/blocks/b-call-widget/b-call-widget.less
@@ -31,40 +31,43 @@
 
 	width: 60px;
 	height: 60px;
-	background: #2392ec;
+	background: #2856f6; //linear-gradient(to bottom, #794ae3, #0f7fff);
 	border-radius: 50%;
 	cursor: pointer;
-	box-shadow: 0 1px 6px rgba(0, 0, 0, .06), 0 2px 32px rgba(0, 0, 0, .16) !important;
+	box-shadow: 0 10px 30px fade(#2856f6, 40%);
+	//box-shadow: 0 1px 6px rgba(0, 0, 0, .06), 0 2px 32px rgba(0, 0, 0, .16) !important;
 	z-index: 9999;
 
 	&:before {
 		content: '';
-		width: 35px;
-		height: 35px;
+		width: 62px/2;
+		height: 62px/2;
+		//width: 35px;
+		//height: 35px;
 		position: absolute;
-		top: 13px;
-		left: 12px;
+		top: 29px/2;
+		left: 29px/2;
 		opacity: 0;
 		transform: rotate(-180deg);
 		transition: all 0.4s ease-out;
 
-		background: center center no-repeat url("../../assets/img/hand.svg");
-		background-size: auto 30px;
+		background: center center no-repeat url("../../assets/img/widget-icon.png");
+		background-size: 62px/2;
 	}
 
 	&:after {
 		content: '';
-		width: 24px;
-		height: 24px;
+		width: 20px;
+		height: 20px;
 		position: absolute;
-		top: 18px;
-		left: 18px;
+		top: 20px;
+		left: 20px;
 		opacity: 1;
 		transform: rotate(-180deg);
 		transition: all 0.4s ease-out;
 
-		background: center center no-repeat url("../../assets/img/slider-close.png");
-		background-size: auto 24px;
+		background: center center no-repeat url("../../assets/img/widget-close.png");
+		background-size: 20px;
 	}
 }
 
@@ -77,20 +80,21 @@
 
 .b-call-widget__content {
 	z-index: 100000;
-	width: 375px;
-	height: 700px;
+	width: 300px;
+	//width: 375px;
+	height: 500px;
 	max-height: ~"calc(100% - 105px)";
 	max-width: ~"calc(100% - 20px)";
 	overflow: hidden;
 
 	border-radius: 12px;
 	background-color: #fff;
-	box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.1);
+	box-shadow: 2px 2px 50px 0 rgba(0, 0, 0, 0.1);
 	-webkit-font-smoothing: antialiased;
 	box-sizing: border-box;
 
 	position: fixed;
-	bottom: 86px;
+	bottom: 90px;
 	right: 10px;
 	transition: all 0.3s ease-out;
 	transform: translate3d(0px, 0px, 0px);
@@ -111,4 +115,16 @@
 		opacity: 0;
 		transform: rotate(0deg);
 	}
+}
+
+#callbackFrame {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	border: none;
+
+	//overflow: visible;
+	//-webkit-overflow-scrolling: touch;
 }
