--- a/src/blocks/b-portfolio-item/b-portfolio-item.less
+++ b/src/blocks/b-portfolio-item/b-portfolio-item.less
@@ -7,7 +7,7 @@
 
 .b-portfolio-item__date {
 	font-size: 18px;
-	color: #9ba1b6;
+	color: @text-color;
 	text-transform: uppercase;
 	font-weight: bold;
 	text-align: center;
@@ -17,7 +17,7 @@
 
 .b-portfolio-item__view {
 	position: relative;
-	background: #f5f6fa;
+	background: @body-muted-bg;
 	//background: left top repeat url("../../assets/img/banner-background.png");
 	padding: 80px 15px;
 	margin: 0 -15px;
