--- a/src/blocks/b-review-image/b-review-image.less
+++ b/src/blocks/b-review-image/b-review-image.less
@@ -18,3 +18,8 @@
 	padding: 97px 159px 169px 88px;
 	//padding: 67px 83px 84px 66px;
 }
+
+.b-review-image__img[data-rjs-processed=true][width="0"][height="0"] {
+	width: 519px !important;
+	height: 731px !important;
+}
