--- a/src/blocks/b-review/b-review.less
+++ b/src/blocks/b-review/b-review.less
@@ -59,7 +59,7 @@
 
 	.b-review__link {
 		&:after {
-			background: #008fcb center center no-repeat url("../../assets/img/zoom.svg");
+			background: #2856f6 center center no-repeat url("../../assets/img/zoom.svg");
 			background-size: 14px;
 			box-shadow: 0 8px 48px rgba(0, 143, 203, .4);
 		}
