--- a/src/less/common.less
+++ b/src/less/common.less
@@ -209,8 +209,8 @@ body {
 	&:active.focus,
 	&:active:focus,
 	&:active:hover {
-		background-color: #007cb5;
-		border-color: #007cb5;
+		background-color: #161f6a; //#007cb5;
+		border-color: #161f6a; //#007cb5;
 	}
 }
 
@@ -243,7 +243,7 @@ body {
 }
 
 .fancybox-overlay {
-	background: fade(#4c5370, 70%);
+	background: fade(#161f6a, 70%);
 }
 
 .fancybox-close {
