--- a/src/blocks/b-portfolio/b-portfolio.less
+++ b/src/blocks/b-portfolio/b-portfolio.less
@@ -13,6 +13,22 @@
 	text-align: center;
 	margin-top: 0;
 	margin-bottom: 53px;
+
+	margin-left: 15px;
+	margin-right: 15px;
+
+	@media (min-width: @screen-sm-min) {
+		margin-left: 30px;
+		margin-right: 30px;
+	}
+	@media (min-width: @grid-float-breakpoint) {
+		margin-left: 75px;
+		margin-right: 75px;
+	}
+	@media (min-width: @screen-xl-min) {
+		margin-left: 100px;
+		margin-right: 100px;
+	}
 }
 
 .b-portfolio__header_small {
@@ -240,7 +256,7 @@ html.videoautoplay .b-portfolio__video {
 	right: 0;
 	bottom: 0;
 
-	background: rgba(76, 83, 112, .9);
+	background: fade(#161f6a, 80%);
 	border-radius: 15px;
 
 	color: #fff;
@@ -263,7 +279,7 @@ html.videoautoplay .b-portfolio__video {
 	border-radius: 25px/2;
 	letter-spacing: .1em;
 	text-transform: uppercase;
-	background: #4C5370;
+	background: #161f6a;
 
 	padding: 0 11px;
 }
@@ -279,36 +295,6 @@ html.videoautoplay .b-portfolio__video {
 	background: #f82125 center center no-repeat url("../../assets/img/love.svg");
 	background-size: 13px 12px;
 	box-shadow: 0 8px 48px rgba(248, 33, 37, .4);
-}
-
-.b-portfolio__type_html5 {
-	@type-color: #a840b7;
-	background: @type-color;
-	box-shadow: 0 8px 48px fade(@type-color, 40%);
-}
-
-.b-portfolio__type_gif {
-	@type-color: #008ece;
-	background: @type-color;
-	box-shadow: 0 8px 48px fade(@type-color, 40%);
-}
-
-.b-portfolio__type_jpg {
-	@type-color: #00d873;
-	background: @type-color;
-	box-shadow: 0 8px 48px fade(@type-color, 40%);
-}
-
-.b-portfolio__type_video {
-	@type-color: #4c5370;
-	background: @type-color;
-	box-shadow: 0 8px 48px fade(@type-color, 40%);
-}
-
-.b-portfolio__type_story {
-	@type-color: #4c5370;
-	background: @type-color;
-	box-shadow: 0 8px 48px fade(@type-color, 40%);
 }
 
 .b-portfolio__title {
@@ -327,6 +313,7 @@ html.videoautoplay .b-portfolio__video {
 	margin-left: 7px;
 	text-transform: uppercase;
 	letter-spacing: 0.140em;
+	line-height: 1.4;
 }
 
 .b-portfolio__date {
@@ -342,7 +329,7 @@ html.videoautoplay .b-portfolio__video {
 
 	padding: 0 11px;
 	margin: 0;
-	color: #4c5370;
+	color: @text-color;
 	background-color: #ffffff;
-	box-shadow: 0 8px 48px rgba(76, 83, 112, .4);
+	box-shadow: 0 8px 48px fade(#161f6a, 10%);
 }
