--- a/src/blocks/b-style-filter/b-style-filter.less
+++ b/src/blocks/b-style-filter/b-style-filter.less
@@ -3,7 +3,7 @@
 @import "mymixins";
 
 .b-style-filter {
-	background: #f5f6fa;
+	background: @body-muted-bg;
 	text-align: center;
 	padding: 14px 0;
 	margin-top: -29px;
