--- a/src/blocks/b-vacancies/b-vacancies.less
+++ b/src/blocks/b-vacancies/b-vacancies.less
@@ -30,7 +30,7 @@
 	&:hover, &:active, &:focus {
 		color: @text-color;
 		text-decoration: none;
-		border: 4px solid #008fcb;
+		border: 4px solid #2856f6;
 		box-shadow: none;
 		border-radius: 4px;
 	}
